--- a/src/assets/styles/pages/Contact.scss
+++ b/src/assets/styles/pages/Contact.scss
@@ -279,7 +279,7 @@
         -ms-flex-align: center;
         align-items: center;
         gap: 20px;
-        z-index: 999;
+        z-index: 9999;
 
         .rs {
             width: 45px;
